fix(shared-choice): show full label width when error is active on ie 11

--- a/shared/components/Choice/Choice.modules.scss
+++ b/shared/components/Choice/Choice.modules.scss
@@ -78,3 +78,8 @@
   position: absolute;
   top: auto;
 }
+
+.ieFullWidth {
+  // Fixes an issue in IE 11 where the label will not have the correct width while an error is activated
+  width: 100%;
+}
